# scalebar

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cmakelists.txt
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
test/: test.cpp  test_lib.hpp  test_manager.cpp  test_resources.cpp  test_resources.hpp  test_sdl.hpp
